[project]
name = "cerberror"
version = "0.1.1"
description = "A package allowing to define own error messages for Cerberus"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
keywords = ["validation", "customized", "error", "messages"]
authors = [
  {name = "Przemysław Bruś"}
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
  "Cerberus>=1.3.7"
]

[project.urls]
"Source" = "https://github.com/pbrus/cerberror"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
